<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_gravity="center|top"
    tools:context="com.ebookfrenzy.nameformater.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_format_text_view"
        android:textSize="30sp"/>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_middle_last"
        android:hint="@string/first_name_and_middile_namd_and_last_name_hint"
        android:onClick="onFirstMiddleLastClick"
        android:id="@+id/first_middle_last_button"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_last"
        android:hint="@string/first_name_and_last_name_hint"
        android:onClick="onFirstLastClick"
        android:id="@+id/first_last_button"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_first_middle"
        android:hint="@string/last_name_and_first_name_and_middle_name_hint"
        android:onClick="onLastFirstMiddleClick"
        android:id="@+id/last_first_middle_button"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_first"
        android:hint="@string/last_name_and_first_name_hint"
        android:onClick="onLastFirstClick"
        android:id="@+id/last_first_button"/>


</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:hint="@string/first_name_edit_text_hint"
            android:id="@+id/users_first_name_edit_text"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:hint="@string/middile_name_edit_text_hint"
            android:id="@+id/users_middile_name_edit_text"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:hint="@string/last_name_edit_text_hint"
            android:id="@+id/users_last_name_edit_text"/>

    </LinearLayout>

</LinearLayout>
